# courseWork_1

./: .gitignore  CMakeLists.txt  README.md  humans
Demo/: Demo.pro  FImageThumbModel.cpp  FImageThumbModel.h  FMainWindow.cpp  FMainWindow.h  FMainWindow.ui  main.cpp
docs/: Doxyfile  Технічне завдання.docx
docs/html/: FDatabaseDriver_8h.html  FDatabaseDriver_8h__dep__incl.md5  FDatabaseDriver_8h__incl.md5  FDatabaseDriver_8h_source.html  FFaceDetector_8h_source.html  FFaceModel_8h_source.html  FFaceRecognizer_8h_source.html  FFace_8h_source.html  FHelpWidget_8h.html  FHelpWidget_8h__incl.md5  FHelpWidget_8h_source.html  FImageDrawAreaWidget_8h.html  FImageDrawAreaWidget_8h__dep__incl.md5  FImageDrawAreaWidget_8h__incl.md5  FImageDrawAreaWidget_8h_source.html  FImageProxyModel_8h.html  FImageProxyModel_8h__dep__incl.md5  FImageProxyModel_8h__incl.md5  FImageProxyModel_8h_source.html  FImageShowDialog_8h.html  FImageShowDialog_8h__incl.md5  FImageShowDialog_8h_source.html  FImage_8h.html  FImage_8h__dep__incl.md5  FImage_8h__incl.md5  FImage_8h_source.html  FMainFacecopeModel_8h.html  FMainFacecopeModel_8h__dep__incl.md5  FMainFacecopeModel_8h__incl.md5  FMainFacecopeModel_8h_source.html  FMainWindow_8h.html  FMainWindow_8h__incl.md5  FMainWindow_8h_source.html  FSetFaceInfoDialog_8h.html  FSetFaceInfoDialog_8h__incl.md5  FSetFaceInfoDialog_8h_source.html  FSettingsWidget_8h.html  FSettingsWidget_8h__incl.md5  FSettingsWidget_8h_source.html  FWorkingWidget_8h.html  (+113 more)
docs/html/search/: all_1.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  searchdata.js
docs/latex/: FDatabaseDriver_8h.tex  FDatabaseDriver_8h__dep__incl.md5  FDatabaseDriver_8h__incl.md5  FHelpWidget_8h.tex  FHelpWidget_8h__incl.md5  FImageDrawAreaWidget_8h.tex  FImageDrawAreaWidget_8h__dep__incl.md5  FImageDrawAreaWidget_8h__incl.md5  FImageProxyModel_8h.tex  FImageProxyModel_8h__dep__incl.md5  FImageProxyModel_8h__incl.md5  FImageShowDialog_8h.tex  FImageShowDialog_8h__incl.md5  FImage_8h.tex  FImage_8h__dep__incl.md5  FImage_8h__incl.md5  FMainFacecopeModel_8h.tex  FMainFacecopeModel_8h__dep__incl.md5  FMainFacecopeModel_8h__incl.md5  FMainWindow_8h.tex  FMainWindow_8h__incl.md5  FSetFaceInfoDialog_8h.tex  FSetFaceInfoDialog_8h__incl.md5  FSettingsWidget_8h.tex  FSettingsWidget_8h__incl.md5  FWorkingWidget_8h.tex  FWorkingWidget_8h__dep__incl.md5  FWorkingWidget_8h__incl.md5  FacecopeTypes_8h.tex  FacecopeTypes_8h__dep__incl.md5  FacecopeTypes_8h__incl.md5  FacecopeUtils_8h.tex  FacecopeUtils_8h__dep__incl.md5  FacecopeUtils_8h__incl.md5  annotated.tex  classFDatabaseDriver.tex  classFFace.tex  classFFaceDetector.tex  classFFaceModel.tex  classFFaceModel__coll__graph.md5  (+50 more)
oldVersion/: FaceDetector.cpp  PersonFace.cpp  Picture.cpp  Utils.cpp  main.cpp
oldVersion/include/: FaceDetector.h  PersonFace.h  PersonRecognizer.h  Picture.h  Utils.h
qtTesting/: dialoglistview.cpp  dialoglistview.h  dialoglistview.ui  main.cpp  mylistmodel.cpp  mylistmodel.h  qtTesting.pro
res/: facecope.db  faces.xml  genders_recognition.xml  helpText.html  recognizer.xml  recognizer_saved.xml  res.qrc  settings.fcp
samples/: photo.csv  photo_humans.csv
samples/FileBrowserTutor/: FileBrowserWindow.cpp  FileBrowserWindow.h  FileBrowserWindow.ui  main.cpp
samples/ImageProcessing/: FFaceArea.cpp  FFaceDetector.cpp  FFaceRecognizer.cpp  FFaceRecognizer.h  FPerson.h
samples/playground/: Fisherface.cpp  HoughTransform.cpp  LBPHrecognition.cpp  RGBand.cpp  alphaBlending.cpp  aphineTransfrom.cpp  canny.cpp  captureVideo.cpp  cascadeClasified.cpp  contour.cpp  contourCircle.cpp  faceDetector.cpp  immodify.cpp  mouseTracking.cpp  noice.cpp  picInfo.cpp  sobel.cpp  threahold2.cpp  videoDemo.cpp  webcam.cpp  xmlExample.cpp
src/: FaceDetector.cpp  PersonFace.cpp  PersonRecognizer.cpp  Picture.cpp  Utils.cpp  main.cpp
src/Facecope/: FDatabaseDriver.cpp  FDatabaseDriver.h  FFaceModel.cpp  FHelpWidget.cpp  FHelpWidget.h  FIcon.cpp  FIcon.h  FImageDrawAreaWidget.cpp  FImageDrawAreaWidget.h  FImageListModel.cpp  FImageListModel.h  FImageProxyModel.cpp  FImageProxyModel.h  FImageShowDialog.cpp  FImageShowDialog.h  FImageShowDialog.ui  FImageThumbModel.cpp  FImageThumbModel.h  FMainWindow.cpp  FMainWindow.h  FMainWindow.ui  FPicture.cpp  FPicture.h  FPicture.ui  FSettingsWidget.cpp  FSettingsWidget.h  FSettingsWidget.ui  FWorkingWidget.cpp  FWorkingWidget.h  FWorkingWidget.ui  Facecope.pro  FileBrowserForm.cpp  FileBrowserForm.h  FileBrowserForm.ui  Settings.cpp  Settings.h  StartMenuForm.cpp  StartMenuForm.h  StartMenuForm.ui
src/Facecope/FacecopeCore/: FDatabaseDriver.cpp  FImage.cpp  FacecopeUtils.cpp
src/Facecope/ImageProcessing/: FFaceArea.h  FFaceDetector.h  FImage.cpp  FImage.h  FPerson.cpp  FPicruresModel.cpp  FPicruresModel.h  Facecope.h  Utils.cpp  Utils.h
src/Facecope/ImageWork/: FFace.cpp  FFace.h  FFaceDetector.cpp  FFaceDetector.h  FFaceRecognizer.cpp  FFaceRecognizer.h  FImage.cpp  FImage.h  FacecopeTypes.h  FacecopeUtils.cpp  FacecopeUtils.h
src/Facecope/include/: FMainWindow.h
src/Facecope/models/: FFaceModel.cpp  FImageProxyModel.cpp  FImageThumbModel.cpp  FMainFacecopeModel.cpp
src/Facecope/uis/: FMainWindow.ui
src/Facecope/widgets/: FImageDrawAreaWidget.cpp  FImageShowDialog.cpp  FMainWindow.cpp  FSetFaceInfoDialog.cpp  FSetFaceInfoDialog.h  FSetFaceInfoDialog.ui  FSettingsWidget.cpp  FWorkingWidget.cpp
src/FileBrowserTutor/: FileBrowserTutor.pro  FileBrowserWindow.cpp  FileBrowserWindow.h  FileBrowserWindow.ui
src/ImageProcessing/: FFaceArea.cpp  FFaceDetector.cpp  FFaceRecognizer.cpp  FImage.cpp  FPerson.cpp  Utils.cpp
src/ImageProcessing/include/: FFaceArea.h  FImage.h  (+4 more)
src/include/: FaceDetector.h  Facecope.h  PersonFace.h  PersonRecognizer.h  Picture.h  Utils.h
src/playground/: canny.cpp  capture.avi  comics.cpp  contourCircle.cpp  faceDetector.cpp  fill.cpp  filter.cpp  helloWorld.cpp  hsvand.cpp  integral.cpp  lapslasFilter.cpp  morTrans.cpp  resize.cpp  roi.cpp  roiModify.cpp  skinDetector.cpp  smooth.cpp  sobelFilter.cpp  threahold.cpp  threahold3.cpp  trackDemo.cpp  xmlExample.cpp
(+27 files in other folders)
